--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <form action="" method="POST">
-        <input type="text" name="title"><br>
-        <textarea name="body" id="" cols="30" rows="7"></textarea>
-        <button type="submit">Submit</button>
-    </form>
-</body>
-</html>
+// добавление поста
+<%= include layout/header.ejs %>
+
+
+
+<%= include layout/footer.ejs %>
