--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,17 @@
 <% include layout/header.ejs %>
-    <h1>ZDAROVA JIRNIU PIDOR    </h1>
-  
+    <div class="wrapper">
+        <div class="container">
+            p*5>lorem*10
+        </div>
+        <div class="regform">
+            <form action="" method="POST">
+                <label for="login-login">Логин</label><br></p> 
+                <input type="text" id="login-login" name="login"><br>
+                <label for="password-login">Пароль</label><br>
+                <input type="password" id="password-login" name="password"><br>
+                <button type="submit" name="login-button">Регистрация</button><br>
+                <button type="submit" name="login-button">Логин</button>
+            </form>
+        </div>
+    </div>
 <% include layout/footer.ejs %>
