--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -3,5 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
+    <header>
+        <h1>Announcement Deck</h1>
+    </header>
