--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,92 @@
 <% include layout/header.ejs %>
     <div class="wrapper">
         <div class="container">
-            p*5>lorem*10
+            <p>
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi molestias quibusdam iusto laboriosam ullam obcaecati iste maxime libero, eligendi tenetur laudantium, hic repellendus labore velit molestiae ipsa illum facere! Tenetur.</span>
+                <span>Nam, provident debitis est unde veritatis error et cumque maxime iure sapiente ea autem sed, nulla exercitationem distinctio dolor beatae sunt natus commodi consectetur. Quisquam quae assumenda qui magnam at.</span>
+                <span>Eos beatae iure ea at eaque mollitia ut quidem deserunt odit modi. Quo quam cum rem, aperiam tempore ipsam quos illum, accusamus iusto officia, adipisci error! Libero consequatur ipsa facilis!</span>
+                <span>Magnam amet repellendus recusandae accusamus! Commodi, quod nulla. Vitae fuga iure adipisci iste beatae possimus perferendis? Molestiae suscipit facere, sapiente officia ea laboriosam tempore sit delectus in omnis facilis vitae.</span>
+                <span>Animi sint amet aliquid neque ratione, eligendi optio. Nulla, vero tenetur aut facilis voluptate, consequuntur sit illo sapiente adipisci odio placeat id modi aliquam accusantium dolor voluptas quia minima dolores?</span>
+                <span>Aliquid, soluta consectetur accusantium iusto reprehenderit velit pariatur, et maiores sed esse dolores explicabo repudiandae. Reiciendis vero eos sit qui tempore repellat ab quia laborum non, officiis, maiores deleniti veniam.</span>
+                <span>Iusto nemo quidem adipisci repudiandae magni aut dolor culpa doloremque sapiente facilis, non hic tempora esse? Commodi, temporibus aliquid, qui quasi, magnam enim quia vel iste eius rem voluptates quisquam!</span>
+                <span>Eos voluptatum distinctio, laudantium deleniti veritatis maxime quibusdam non animi totam iure dolores tempora velit odit repellendus impedit dolore consectetur commodi eaque dolorum! Molestias odit illum aperiam vitae velit ad.</span>
+                <span>Esse enim porro quod facilis perferendis! Dignissimos id sint earum perspiciatis. Sequi suscipit repellat illo repellendus incidunt cupiditate voluptas optio, voluptate in impedit, provident praesentium assumenda eaque laboriosam. Similique, odit!</span>
+                <span>Ex, consequatur ad quis beatae aliquid rerum incidunt ipsam? Quis, tenetur! Accusantium dolor itaque quam praesentium, reiciendis sequi et, modi nostrum earum ipsam debitis repellat repellendus hic delectus dignissimos illum?</span>
+            </p>
+            <p>
+                <span>Quae ex vitae distinctio hic ipsa veniam perspiciatis! Quasi facilis iusto officiis tenetur voluptate quidem consequatur vel eius praesentium sit necessitatibus, quibusdam, minus quas odit quis corporis inventore. Magnam, animi!</span>
+                <span>Temporibus excepturi obcaecati saepe eos ipsam itaque quasi reprehenderit ut blanditiis repudiandae pariatur placeat necessitatibus, ea impedit fugiat minima cum aut iure tempore incidunt illo? Non, accusantium? Tempora, sint quidem?</span>
+                <span>Sapiente obcaecati accusamus alias quae aliquid, at quibusdam est dignissimos veniam culpa quas? Rem magnam blanditiis voluptas! Laudantium provident ea atque voluptate similique asperiores deserunt est debitis quo, a numquam?</span>
+                <span>Magni, eos? Cupiditate nihil reprehenderit iusto voluptates, ex atque libero, corporis accusantium saepe aliquam asperiores dolores hic pariatur architecto facere non? Illum ullam debitis asperiores non? Adipisci ipsa repellendus expedita?</span>
+                <span>Sunt, ullam? Ab, atque! Distinctio ducimus suscipit accusantium magnam facilis quaerat ex, officia quo numquam dolorum possimus rem natus necessitatibus saepe dolores consequatur reiciendis. Ipsa ab facilis soluta nostrum beatae.</span>
+                <span>Accusantium magnam officiis illum accusamus, numquam voluptatibus? Temporibus nihil officiis est non excepturi ea deleniti voluptatibus enim possimus, id suscipit sit veniam? Veniam possimus laborum sunt, obcaecati beatae vero similique!</span>
+                <span>Odio, quo nisi mollitia explicabo veritatis ipsam blanditiis! Pariatur voluptatibus facilis quibusdam libero soluta at voluptatum fugit, voluptas molestiae accusantium dolorum modi sunt eum quos esse? Consequatur nulla molestias inventore.</span>
+                <span>Recusandae molestias illo quam aliquid fugiat corrupti eos consequuntur quae quis? Illo praesentium culpa quaerat, exercitationem ipsam rerum saepe atque sit rem modi consectetur aliquam, nostrum quod dicta delectus nobis!</span>
+                <span>Debitis aspernatur culpa ad laudantium, voluptatem facilis dicta totam. Nemo enim molestias facere animi. Consequatur sapiente distinctio unde aliquid itaque, amet numquam molestias inventore. Debitis error consequatur voluptatum ratione aperiam.</span>
+                <span>Ipsam doloribus blanditiis quaerat, dicta exercitationem veniam aspernatur distinctio animi culpa, quis facilis. Sed aperiam odit vero dignissimos animi aspernatur, vel molestias rerum accusamus earum molestiae velit. Saepe, repudiandae libero.</span>
+            </p>
+            <p>
+                <span>Et dolor corrupti repudiandae delectus veniam eligendi voluptatibus, quam laudantium similique mollitia voluptates laborum dicta provident facilis sint iste placeat asperiores incidunt aliquid id perspiciatis inventore praesentium maxime itaque! Quos.</span>
+                <span>Dolorem voluptas, earum consequuntur perspiciatis tenetur quae ad. Velit et qui, blanditiis magnam voluptas, delectus autem nesciunt sequi ipsa exercitationem reprehenderit alias tenetur dolorum reiciendis ex eos placeat laudantium quam?</span>
+                <span>Ipsum, libero? Asperiores ullam magni dignissimos ex nulla, quidem eveniet ducimus aliquid suscipit provident cum molestias, maiores eligendi ipsam doloribus? Cupiditate ex eligendi suscipit eius velit saepe exercitationem possimus non.</span>
+                <span>Ducimus neque officia laudantium reprehenderit doloribus, eligendi nihil asperiores molestias ab architecto labore facere vero fugit? Ullam, repellendus voluptas id, dolor eaque necessitatibus quod at minima in excepturi similique! Omnis.</span>
+                <span>Fugiat pariatur sint ipsa, modi magnam quaerat, vel, dolore et enim nobis excepturi est! Optio, similique iusto. Tenetur itaque laudantium in eaque dolores, tempore consectetur, corrupti error, totam ad atque?</span>
+                <span>Expedita, illo magnam? Eveniet quis est incidunt praesentium hic quam quibusdam, illo, consequatur esse perferendis rem voluptatem, accusantium placeat laudantium quia unde eaque et nam. Cumque in repellendus voluptatibus veritatis.</span>
+                <span>Minima aut veritatis tenetur sunt explicabo veniam architecto alias facilis cumque possimus. Nam, reprehenderit. Ab eveniet eaque recusandae accusamus, similique unde itaque neque ducimus nihil magnam perferendis. Eius, facilis tenetur?</span>
+                <span>Quisquam animi labore, ducimus quam cumque maxime laborum natus aperiam eveniet veritatis enim. Quisquam ullam ut atque corrupti, aliquam ex doloribus quo velit et voluptas, quam maxime porro temporibus. Molestias.</span>
+                <span>Porro architecto quae nihil, quas quaerat distinctio libero dolores. Tempore deserunt facilis itaque ratione possimus! Molestiae praesentium, eveniet labore aperiam maiores libero commodi accusamus dolore harum. Qui debitis sunt expedita!</span>
+                <span>Consequatur nemo debitis odit officia? Expedita aut culpa ducimus quidem illum, dolorum sequi quod maxime reprehenderit error natus maiores nemo impedit fugit cupiditate officia, quasi, placeat minus similique sint quos?</span>
+            </p>
+            <p>
+                <span>Architecto ea, omnis debitis ipsam, doloremque modi similique reiciendis, asperiores aut quia rerum exercitationem nostrum animi. Quos obcaecati, neque laborum ipsum, aperiam voluptas possimus quia aliquid quisquam, ut tempora libero.</span>
+                <span>Quibusdam, voluptatem quae. Delectus tempora nobis vitae laboriosam, in, officia placeat voluptates nisi, sed quasi repudiandae ea aperiam omnis. Voluptates asperiores dicta culpa cumque commodi recusandae suscipit pariatur fugit ad!</span>
+                <span>Illum, nemo quasi inventore ipsum, repellendus iure dolore sunt nisi quisquam corporis sit quaerat alias praesentium fuga? Dolorem dolores officia dignissimos voluptatibus eius vero, vel ipsum commodi labore placeat necessitatibus.</span>
+                <span>Quia doloremque corrupti iure quas, fugit ducimus numquam nemo eligendi repudiandae quis quam ex modi quaerat alias ullam cupiditate soluta. Nihil consequatur eius, suscipit sit nisi voluptatibus totam? Repudiandae, dolore.</span>
+                <span>Magnam tempora sapiente, provident exercitationem soluta doloremque expedita optio? Incidunt vitae atque fugit sed optio? Tenetur quis debitis placeat asperiores aperiam nostrum! Earum voluptatem ipsam molestias a autem reprehenderit cum.</span>
+                <span>Obcaecati cumque aut nesciunt recusandae sapiente modi, tempora dolor facere perspiciatis numquam accusamus enim quam commodi ratione facilis reiciendis a! Dolores quasi architecto similique adipisci! Neque fugit modi quam repudiandae?</span>
+                <span>Repudiandae tempore eos fugit eveniet. Rerum, earum, suscipit aut minima nesciunt id est asperiores possimus, enim consequatur odit quis ducimus. Earum iste dignissimos iure facere eveniet repudiandae sequi libero iusto!</span>
+                <span>Perspiciatis reprehenderit similique vel earum eius fugiat, distinctio possimus velit quia excepturi praesentium quasi repudiandae ipsa delectus totam atque ipsam neque ab nisi magnam! Nemo voluptatem repellat magni. Culpa, voluptatem!</span>
+                <span>Vel, excepturi. Quod debitis maiores inventore quisquam facere saepe ipsa recusandae quae molestiae corporis repellendus, autem obcaecati et voluptatibus delectus asperiores enim eligendi necessitatibus quam nemo rem animi cupiditate consequuntur!</span>
+                <span>Libero aspernatur quas sunt tenetur tempora nulla, soluta aliquid? Perferendis minima magni numquam esse ut consequatur perspiciatis nisi facere accusantium accusamus repudiandae, doloremque explicabo similique vitae ipsum delectus voluptatem praesentium.</span>
+            </p>
+            <p>
+                <span>Repellendus illo ad veritatis alias officiis error minus natus molestiae adipisci, magnam dolorem perferendis deleniti accusamus quasi ipsa nam tempora unde provident itaque? Necessitatibus nemo autem quia facilis id fuga!</span>
+                <span>Qui blanditiis nihil, placeat cum, iusto suscipit, a alias iste eos asperiores voluptatum ipsa nostrum magnam impedit autem omnis! In beatae ad quo alias doloribus, amet odio molestias harum culpa?</span>
+                <span>Nobis vel libero et dolorum quam, dolores inventore necessitatibus quasi tempore esse eos illo laborum est vitae harum sequi iste mollitia praesentium iusto. Sunt ut nisi tempore, nostrum aperiam hic.</span>
+                <span>Inventore maxime velit minus sint quisquam ad, fugiat similique enim dolorem necessitatibus atque quo numquam. Expedita sequi maxime quisquam, rem mollitia incidunt! Illo fugit deserunt debitis tempora veritatis! Magnam, quas!</span>
+                <span>Voluptas eum magnam doloremque animi repellat eligendi, sit, deleniti doloribus itaque, natus consectetur amet ut. Ab fugiat ea, praesentium blanditiis consequuntur facilis quaerat, iure, quod quibusdam dignissimos porro harum consectetur?</span>
+                <span>Cumque ab harum vel iusto quis asperiores natus nostrum magni obcaecati. Culpa nemo a distinctio, beatae, sapiente explicabo consequatur voluptatibus voluptas voluptatum eligendi magni nesciunt laudantium repudiandae necessitatibus aliquam assumenda?</span>
+                <span>Iste veritatis, dolore saepe neque numquam, id animi mollitia, consectetur placeat a ullam deserunt ducimus alias! Eligendi officiis voluptatem expedita porro, itaque numquam libero aspernatur fuga optio architecto quibusdam amet!</span>
+                <span>Obcaecati ad nobis cupiditate esse a blanditiis voluptatibus nesciunt, perspiciatis voluptate distinctio harum et, nihil id necessitatibus hic placeat saepe, consequatur molestiae debitis non incidunt beatae facere corrupti voluptatem? Natus.</span>
+                <span>Harum dolores debitis cupiditate recusandae odit error maiores illo reiciendis, velit nesciunt praesentium eveniet exercitationem, unde in commodi odio et. Ea dolorum voluptatem quaerat, suscipit id facere molestias. Ratione, quisquam.</span>
+                <span>Nulla natus voluptate consequatur odit pariatur magni harum, voluptatibus eaque optio eligendi minima asperiores eius officiis atque eum quibusdam consectetur mollitia ea? Eius animi incidunt, quas non illo facere magnam.</span>
+            </p>
         </div>
-        <div class="regform">
-            <form action="" method="POST">
-                <label for="login-login">Логин</label><br></p> 
-                <input type="text" id="login-login" name="login"><br>
-                <label for="password-login">Пароль</label><br>
-                <input type="password" id="password-login" name="password"><br>
-                <button type="submit" name="login-button">Регистрация</button><br>
-                <button type="submit" name="login-button">Логин</button>
-            </form>
+        
+        <div class="forms">
+            <div class="logform">
+                <form action="" method="POST" name="login_form">
+                    <label for="login-login">Логин</label><br></p> 
+                    <input type="text" id="login-login" name="login-login"><br>
+                    <label for="password-login">Пароль</label><br>
+                    <input type="password" id="password-login" name="password-login"><br>
+                    <button type="submit" class="switch-button register-button">Регистрация</button><br>
+                    <button type="submit" class="login-button">Войти</button>
+                </form>
+            </div>
+            <div class="regform logform">
+                <form action="" method="POST" name="register_form">
+                    <label for="login-register">Логин</label><br></p> 
+                    <input type="text" id="login-register" name="login-register"><br>
+                    <label for="password-register">Пароль</label><br>
+                    <input type="password" id="password-register" name="password-register"><br>
+                    <label for="password-register-require">Повторите пароль</label><br>
+                    <input type="password" id="password-register-require" name="password-register-require"><br>
+                     <button type="submit" class="switch-button login-button">Вход</button><br>
+                    <button type="submit" class="register-button">Регистрация</button>
+                   
+                </form>
+            </div>
         </div>
     </div>
 <% include layout/footer.ejs %>
