added reg method

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,7 +70,7 @@
                     <input type="text" id="login-login" name="login-login"><br>
                     <label for="password-login">Пароль</label><br>
                     <input type="password" id="password-login" name="password-login"><br>
-                    <button type="submit" class="switch-button register-button">Регистрация</button><br>
+                    <button type="submit" class="switch-button">Регистрация</button><br>
                     <button type="submit" class="login-button">Войти</button>
                 </form>
             </div>
@@ -82,7 +82,7 @@
                     <input type="password" id="password-register" name="password-register"><br>
                     <label for="password-register-require">Повторите пароль</label><br>
                     <input type="password" id="password-register-require" name="password-register-require"><br>
-                     <button type="submit" class="switch-button login-button">Вход</button><br>
+                    <button type="submit" class="switch-button login-button">Вход</button><br>
                     <button type="submit" class="register-button">Регистрация</button>
                    
                 </form>
