--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,9 @@
 <% include layout/header.ejs %>
     <div class="wrapper">
         <div class="container">
-           
+          
         </div>
-        
+        <% if(!user._id && !user.login) { %> 
         <div class="forms">
             <div class="logform" id="">
                 <form action="" method="POST" name="login_form">
@@ -13,6 +13,7 @@
                     <input type="password" id="password-login" name="password-login"><br>
                     <button type="submit" class="switch-button">Регистрация</button><br>
                     <button type="submit" class="login-button">Войти</button>
+               
                 </form>
             </div>
             <div class="regform logform">
@@ -25,9 +26,14 @@
                     <input type="password" id="password-register-require" name="password-register-require"><br>
                     <button type="submit" class="switch-button login-button">Вход</button><br>
                     <button type="submit" class="register-button">Регистрация</button>
-                   
+                 
                 </form>
             </div>
         </div>
+        <% }else{  %>
+        <p class="Hi">Привет <%= user.login %> ! </p> 
+        <a href='/api/auth/logout'> Выход</a>
+        <% }%>
+
     </div>
 <% include layout/footer.ejs %>
