--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -6,7 +6,8 @@
 src="https://code.jquery.com/jquery-3.3.1.min.js"
 integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 crossorigin="anonymous"></script>
-<script src="js/mainscript.js"></script>
+<script src="<%= assetFingerprint('/js/scripts.js')%>"></script>
+
 
 </body>
 </html>
