--- a/views/layout/form.ejs
+++ b/views/layout/form.ejs
@@ -25,7 +25,10 @@
             </div>
 
     <% }else{  %>
-        <p class="Hi">Привет <%= user.login %> ! </p> 
-        <a href='/api/auth/logout'> Выход</a>
+        <div class="usercab">
+            <p class="Hi">Привет <%= user.login %> ! </p> 
+            <a href='/post/add'> Добавить пост</a><br>
+            <a href='/api/auth/logout'> Выход</a>
+        </div>
     <% }%>
         </div>
