--- a/views/post/post.ejs
+++ b/views/post/post.ejs
@@ -11,7 +11,7 @@
                     <p><%= post.body %></p>
                 </div>
                 <div class="post__author">
-                    <h5><%= post.owner %></h5>
+                    <h5><%= post.owner.login%></h5>
                 </div>
             </div>
             </div>
