--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,6 +151,9 @@ footer {
   margin: 0;
   padding: 0;
   font-family: 'Source Sans Pro', sans-serif; }
+  * a {
+    text-decoration: none;
+    color: black; }
 
 body {
   background: url("/images/bg.jpg");
