--- a/views/archive/user.ejs
+++ b/views/archive/user.ejs
@@ -1,4 +1,4 @@
-<% include layout/header.ejs %>
+<% include ../layout/header.ejs %>
     <div class="wrapper">
         <div class="container">
         <% for(var i=0;i< posts.length;i++){ %>
@@ -11,9 +11,6 @@
                     <p>
                     <%= posts[i].body %>
                     </p>
-                </div>
-                <div class="post__author">
-                    <h5><%= posts[i].owner %></h5>
                 </div>
             </div>
         </div>
@@ -32,6 +29,6 @@
          </div>
         </div>
       
-        <% include layout/form.ejs %>
+        <% include ../layout/form.ejs %>
     </div>
-<% include layout/footer.ejs %>
+<% include ../layout/footer.ejs %>
