--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,7 +153,7 @@ footer {
   font-family: 'Source Sans Pro', sans-serif; }
   * a {
     text-decoration: none;
-    color: black; }
+    color: seagreen; }
 
 body {
   background: url("/images/bg.jpg");
