--- a/views/archive/index.ejs
+++ b/views/archive/index.ejs
@@ -19,13 +19,13 @@
          
             <div class="pagination">
                 <% if(current >2) { %> 
-                    <a href="/archive/<%= Number(current)-1%>" class="new">&#8592;Туда</a>
+                    <a href="/archive/<%= Number(current)-1%>" class="new page__btn">&#8592;Туда</a>
                 <%}%>
                 <%if(current == 2) { %> 
-                    <a href="/" class="new">На главную</a>
+                    <a href="/" class="new page__btn">На главную</a>
                 <%}%>
                 <% if(pages > 0 && current < pages) { %> 
-                    <a href="/archive/<%= Number(current)+1%>" class="old">Туда&#8594;</a>
+                    <a href="/archive/<%= Number(current)+1%>" class="old page__btn">Туда&#8594;</a>
                 <%}%>
             </div>
         </div>
